--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -46,11 +46,11 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/buttonSave"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="200dp"
-            android:text="Button" />
+            android:text="ZAPISZ" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
