Obrócono poprawnie ekran + dodano kontrolę jasności.

--- a/app/src/main/res/layout/activity_test_camera.xml
+++ b/app/src/main/res/layout/activity_test_camera.xml
@@ -10,6 +10,30 @@
         android:id="@+id/javaCameraView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="356dp" />
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="151dp"
+        android:layout_marginBottom="356dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="192dp"
+        android:layout_marginBottom="116dp"
+        android:stepSize="1"
+        android:value="0"
+        android:valueFrom="-150.0"
+        android:valueTo="150.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/javaCameraView"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
