--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".test_camera">
+    tools:context=".ActivityCamera">
 
     <org.opencv.android.JavaCameraView
         android:id="@+id/javaCameraView"
@@ -14,6 +14,7 @@
         android:layout_marginTop="356dp"
         android:layout_marginEnd="151dp"
         android:layout_marginBottom="356dp"
+        android:rotation="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
