--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,4 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".ActivityHistory">
 
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="126dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="126dp"
+        android:gravity="center"
+        android:text="HISTORIA"
+        android:textSize="36sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp">
+<!--                <TableRow>-->
+
+<!--                    <TextView-->
+<!--                        android:layout_margin="2dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="#999999"-->
+<!--                        android:gravity="center"-->
+<!--                        android:padding="3dp"-->
+<!--                        android:text="Imię i nazwisko"-->
+<!--                        android:textColor="#0D47A1"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <TextView-->
+<!--                        android:layout_margin="2dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="#999999"-->
+<!--                        android:gravity="center"-->
+<!--                        android:padding="3dp"-->
+<!--                        android:text="Punkty"-->
+<!--                        android:textColor="#0D47A1"-->
+<!--                        android:textStyle="bold" />-->
+
+<!--                    <TextView-->
+<!--                        android:layout_margin="2dp"-->
+<!--                        android:layout_weight="1"-->
+<!--                        android:background="#999999"-->
+<!--                        android:gravity="center"-->
+<!--                        android:padding="3dp"-->
+<!--                        android:text="Data"-->
+<!--                        android:textColor="#0D47A1"-->
+<!--                        android:textStyle="bold" />-->
+<!--                </TableRow>-->
+        </TableLayout>
+
+
+
+    </RelativeLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
