--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1F344B"
     tools:context=".ActivitySettings">
+
+    <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:gravity="left"
+        android:textColor="#FF0000"
+        android:padding="5dip"
+        />
 
     <LinearLayout
         android:layout_width="409dp"
@@ -26,7 +37,7 @@
             android:fontFamily="sans-serif-black"
             android:gravity="center"
             android:text="USTAWIENIA"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="36sp" />
 
         <LinearLayout
@@ -43,8 +54,9 @@
                 android:height="48dp"
                 android:gravity="center"
                 android:text="Język"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spinner"
@@ -70,19 +82,23 @@
                 android:layout_height="125dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="#6322A805"
+                android:backgroundTint="#FEC331"
                 android:text="ZAPISZ"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:cornerRadius="75px" />
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="125dp"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:backgroundTint="#6AF60000"
+                android:layout_weight="1.3"
+                android:backgroundTint="#FC5B19"
                 android:text="WRÓĆ"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:cornerRadius="75px" />
         </LinearLayout>
 
     </LinearLayout>
