--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1F344B"
     tools:context=".ActivityStart">
 
     <LinearLayout
@@ -25,8 +26,9 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="PRZYGOTOWANIE"
-            android:textColor="#000000"
-            android:textSize="36sp" />
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,8 +43,9 @@
                 android:layout_weight="0.5"
                 android:gravity="center"
                 android:text="Imię :"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editTextName"
@@ -53,7 +56,7 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:text="IMIĘ"
-                android:textColor="#B5B2B2" />
+                android:textColor="#FFFFFF" />
 
         </LinearLayout>
 
@@ -69,8 +72,9 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Nazwisko:"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editTextSurname"
@@ -82,7 +86,7 @@
                 android:inputType="textPersonName"
                 android:minHeight="48dp"
                 android:text="NAZWISKO"
-                android:textColor="#B5B2B2" />
+                android:textColor="#FFFFFF" />
         </LinearLayout>
 
         <LinearLayout
@@ -97,8 +101,9 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Wiek :"
-                android:textColor="#000000"
-                android:textSize="18sp" />
+                android:textColor="#FFFFFF"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editTextAge"
@@ -110,7 +115,7 @@
                 android:inputType="numberSigned"
                 android:minHeight="48dp"
                 android:text="WIEK"
-                android:textColor="#B5B2B2" />
+                android:textColor="#FFFFFF" />
         </LinearLayout>
 
         <LinearLayout
@@ -128,9 +133,11 @@
                 android:layout_height="125dp"
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="#66D60000"
+                android:backgroundTint="#FC5B19"
                 android:text="Wróć"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:cornerRadius="75px" />
 
             <Button
                 android:id="@+id/buttonNext"
@@ -138,9 +145,11 @@
                 android:layout_height="125dp"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
-                android:backgroundTint="#7A0F8103"
+                android:backgroundTint="#FEC331"
                 android:text="ZAPISZ"
-                android:textSize="18sp" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:cornerRadius="75px" />
         </LinearLayout>
 
     </LinearLayout>
